# SecToPat-HagstromerCatalogue

./: .env.example  .env.template  .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  _quarto.yml  about.qmd  generate_card_pdf.py  generate_reader.py  metadata.json  pyproject.toml  qc.txt  qc_check.py  requirements.txt  styles.css
.github/workflows/: check-version.yml  publish.yml  release.yml
docs/: rerun-investigation.md
experiments/: 2025-02-24-render-scale-05x.md  parallel-ocr.md
src/: __init__.py  __main__.py  check_images.py  cleanup.py  config.py  count_cards.py  embed_text.py  extract_cards.py  extract_pages.py  generate_card_pdf.py  generate_reader.py  generate_site.py  generate_web_images.py  ocr_cards.py  patch_ms_codes.py  subset.py
transcriptions/: 01_0000_0_0.txt  01_0000_0_1.txt  01_0000_0_2.txt  01_0000_0_3.txt  01_0000_1_0.txt  01_0000_1_1.txt  01_0000_1_2.txt  01_0000_1_3.txt  01_0001_0_0.txt  01_0001_0_1.txt  01_0001_0_2.txt  01_0001_0_3.txt  01_0001_1_0.txt  01_0001_1_1.txt  01_0001_1_2.txt  01_0001_1_3.txt  01_0002_0_0.txt  01_0002_0_1.txt  01_0002_0_2.txt  01_0002_0_3.txt  01_0002_1_0.txt  01_0002_1_1.txt  01_0002_1_2.txt  01_0002_1_3.txt  01_0003_0_0.txt  01_0003_0_1.txt  01_0003_0_2.txt  01_0003_0_3.txt  01_0003_1_0.txt  01_0003_1_1.txt  01_0003_1_2.txt  01_0003_1_3.txt  01_0004_0_0.txt  01_0004_0_1.txt  01_0004_0_2.txt  01_0004_0_3.txt  01_0004_1_0.txt  01_0004_1_1.txt  01_0004_1_2.txt  01_0004_1_3.txt  (+5444 more)
